--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css/style.css">  
+    <title>LOVT</title>
+
     
+        
+</head>
+<body>
+    <header >
+        <h1>LOVT</h1>
+        <h6>Your Love, <br>
+            your loft.
+        </h6>
+        <img src="img/Vector.png" alt="">
+    </header>
+    <main> 
+        <section id="banner">
+        <img  src="img/Rectangle 3.png" alt="">
+        <div id="left-arrow" ><</div>
+        <div id="right-arrow" >></div>
+    </section>
+
+    <section id="sales" >
+        <article >
+            <header>
+                <img src="img/Rectangle 6.png" alt="">
+            </header>
+            <footer>
+                <span>$1.200</span>
+                <span class="right">new</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </footer>
+        </article>
+        <article id="right-sales">
+            <header>
+                <img src="img/Rectangle 7.png" alt="">
+            </header>
+            <footer>
+                <span>$2.000</span>
+                <span class="right">Sale</span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            </footer>
+        </article>
+    </section>
+
+    <section id="your-style">
+        <h1>your style </h1>
+        <div><img src="img/Rectangle 11.png" alt="">
+            <span>Industrial</span>
+        </div>
+        <div><img src="img/Rectangle 12.png" alt="">
+            <span>Modern</span>
+        </div>
+        <div><img src="img/Rectangle 13.png" alt="">
+        <span>Classic</span>
+        </div>
+
+    </section">
+</main>
+    <footer>
+        <section >
+        <img src="img/image 1.png" alt="">
+        <p>LOVT - You love, your loft! <br>
+            são Paulo - sp <br>
+            11 952045-56545 <br>
+            contato@contato.com    
+        </p>
+        <h6></h6>
+        <img src="img/facebook-square-brands 1.png" alt="">
+        <img src="img/whatsapp-square-brands 1.png" alt="">
+    </section>
+    </footer>
+</body>
+</html>
